--- a/pratica/ex001.html
+++ b/pratica/ex001.html
@@ -29,7 +29,11 @@
         var n2 = Number(window.prompt('Me diga mais um numero que você deseja somar!'))
         var soma = n1 + n2
         window.confirm(`Você confirma a soma desses numeros ${n1}, ${n2}? `)
-        document.write(`A soma dos numeros  ${n1}, ${n2} é <br> ${soma} `)
+        document.write(`A soma dos numeros  ${n1}, ${n2} é <br> ${soma}<br> `)
+        var idade = 18
+        var confirm = idade +=18? 'Você está dentro' : 'Você é muito novo'
+        var confirm = window.prompt('Qual a sua idade?')
+        document.write(`Sua idade é ${confirm} então, ${idade}`)
 
     </script>
 </body>
